--- a/imgcomp.html
+++ b/imgcomp.html
@@ -12,27 +12,28 @@
 <link href="css/animate.css" rel="stylesheet" type="text/css">
 
 
+
 <header id="header_wrapper">
-    <div class="container">
-      <div class="header_box">
-        <!--<div class="logo"><a href="#">Resume</a></div>-->
-        <nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header">
-          <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          </div>
-          <div id="main-nav" class="collapse navbar-collapse navStyle">
-              <ul class="nav navbar-nav" id="mainNav">
-                <li class="active"><a href="index.html" class="scroll-link">home</a></li>
-                <li><a href="index.html#imgcompress" >About US</a></li>
-                <li><a href="index.html#imgcompress" class="scroll-link">My Skills</a></li>
-                <li><a href="index.html#SSIMcomp" class="scroll-link">Functions</a></li> 
-                <li><a href="index.html#comp" class="scroll-link">Contact</a></li>
-              </ul>
+  <div class="container">
+    <div class="header_box">
+      <!--<div class="logo"><a href="#">Resume</a></div>-->
+      <nav class="navbar navbar-inverse" role="navigation">
+      <div class="navbar-header">
+        <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
         </div>
-       </nav>
+        <div id="main-nav" class="collapse navbar-collapse navStyle">
+            <ul class="nav navbar-nav" id="mainNav">
+              <li class="active"><a href="index.html" class="scroll-link">home</a></li>
+              <li><a href="index.html#aboutUs" class="scroll-link">About US</a></li>
+              <li><a href="index.html#service" class="scroll-link">App Functions</a></li>
+              <li><a href="index.html#Portfolio" class="scroll-link">Info</a></li> 
+              <li><a href="index.html#contact" class="scroll-link">Download</a></li>
+            </ul>
       </div>
+     </nav>
     </div>
-  </header>
+  </div>
+</header>
 
 <section id="introduction">
   <div class="htitle">
@@ -256,7 +257,7 @@ btn.onclick = function() {
 <br>
 <br>
 <br><div style="font-size: 20px !important; text-align: center;" >
-<a href="https://www.w3schools.com/html/default.asp" style="justify-content: center; color: #2fa762;">click here</a> for more information about the fourier transform itself
+<a href="https://www.3blue1brown.com/lessons/fourier-transforms" style="justify-content: center; color: #2fa762;">click here</a> for more information about the fourier transform itself
 </div>
 <br>
 <br>
